# speedy-typers

./: pyproject.toml
app/: main.py
